refactor: clean up for ModuleDependencyChecker